--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
 
 ul {
   list-style-type: none;
+  padding: 0;
 }
 
 li {
@@ -15,6 +16,7 @@ li {
   align-items: center;
   border: 1px solid #ddd;
   border-top: none;
+  width: 100%;
 }
 
 li:first-child {
